--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,3 @@
-.container {
-  text-align: center;
-}
-
 button {
   padding: 10px;
   margin: 24px;
@@ -10,6 +6,19 @@ button {
   background-color: #247BA0;
   border-radius: 20px;
   color: white;
+}
+
+label {
+  float: right;
+}
+
+.container {
+  text-align: center;
+}
+
+.inputClass {
+  /* vertical-align: middle; */
+  display: block;
 }
 
 #submit {
