added dynamic <ul> creation

--- a/style/style.css
+++ b/style/style.css
@@ -14,6 +14,38 @@ button {
   color: white;
 }
 
+ul {
+  list-style-type: none;
+  padding: 0;
+  background-color: white;
+}
+
+li {
+  height: 50px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding: 5px;
+  background-color: #ff5d88;
+  color: white;
+  font-size: 1.5em;
+  line-height: 1.5;
+}
+
+li:before {
+  content: "\200B";
+  position: absolute;
+}
+
+li::after {
+  content: " ";
+  display: block;
+  clear: both;
+}
+
+li:hover {
+  background-color: #febc5d;
+}
+
 .container {
   text-align: center;
 }
