--- a/style/style.css
+++ b/style/style.css
@@ -9,9 +9,13 @@ button {
   margin: 24px;
   cursor: pointer;
   font-size: 24px;
-  background-color: #247BA0;
+  background-color: #ff5d88;
   border-radius: 20px;
   color: white;
+}
+
+button:hover {
+  background-color: #febc5d;
 }
 
 ul {
@@ -27,7 +31,7 @@ li {
   padding: 5px;
   background-color: #ff5d88;
   color: white;
-  font-size: 1.5em;
+  font-size: 24px;
   line-height: 1.5;
 }
 
@@ -50,6 +54,13 @@ li:hover {
   text-align: center;
 }
 
-#submit {
-  display: none;
+.jumbotron {
+  background-color: #33ffb2;
 }
+
+#leaderboard-list {
+  font-size: 24px;
+}
+/* #submit {
+  display: none;
+} */
