--- a/style/style.css
+++ b/style/style.css
@@ -52,6 +52,7 @@ li:hover {
 
 .container {
   text-align: center;
+  /* width: 80%; */
 }
 
 .jumbotron {
@@ -61,6 +62,3 @@ li:hover {
 #leaderboard-list {
   font-size: 24px;
 }
-/* #submit {
-  display: none;
-} */
