--- a/style/style.css
+++ b/style/style.css
@@ -28,6 +28,9 @@ h4 {
   color: #ffffff;
 }
 
+p {
+  font-size: 1rem;
+}
 ul {
   list-style-type: none;
   padding: 0;
@@ -82,6 +85,14 @@ label {
 
 .jumbotron {
   background-color: #8a4d76;
+}
+
+#playerText {
+  border-radius: 20px;
+  border: 0;
+  text-align: center;
+  width: 150px;
+  background-color: #00d1b2;
 }
 
 #ul-container {
