--- a/style/style.css
+++ b/style/style.css
@@ -31,6 +31,7 @@ h4 {
 p {
   font-size: 1rem;
 }
+
 ul {
   list-style-type: none;
   padding: 0;
@@ -79,6 +80,9 @@ label {
 }
 
 #question {
+  font-weight: lighter;
+  font-size: 1.5rem;
+  color: #ffffff;
   margin: 0;
   padding: 2rem;
 }
