--- a/style/style.css
+++ b/style/style.css
@@ -45,8 +45,7 @@ ul {
 
 li {
   height: 50px;
-  margin-top: 1px;
-  /* margin-bottom: 5px; */
+  margin: 1px 0 0 0;
   padding: 5px;
   background-color: #8a4d76;
   color: #ffffff;
